<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <EditText
        android:id="@+id/firstname"
        android:layout_width="334dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_firstname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/lastname"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_lastname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="335dp"
        android:layout_height="75dp"
        android:text="I Agree to terms and condtions"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="373dp" />

    <Button
        android:id="@+id/link_signup"
        android:layout_width="107dp"
        android:layout_height="47dp"
        android:onClick="store InDB"
        android:text="sign up"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="76dp"
        android:text="Already a member? sign in here"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="495dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="218dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="135dp" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="334dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/prompt_phonenumber"
        android:inputType="phone"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="284dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="395dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>